feat(backend): add get post by id endpoint
